--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
 </head>
 <body>
 	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
-	</main>
+		<p>This is a Webpage.</p>
 
+		<p>Hello, my name is Benji Izenberg. I'm a fourth year Psychology and art student at UCSC. I learned a little HTML in highschool but it has been a long time since i've dabbled in coding. I'm very excited for this class as I enjoy the html process. I like to make art and play videogames and look forward to working with my classmates this quarter.</p>
+	</main>
+<img id="my-portrait" src="img/selfie.jpg" />
+<hr>
+	<h2>Labs</h2>
+		<ul>
+			<li><a href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
+			<li><a href="lab3/index.html">Lab 3 File Structures</a></li>
+			<li><a href="lab4/index.html">Lab 4 Pseudocoding & Problem Solving</a></li>
+			<li><a href="lab5/index.html">Lab 5 Data Types & Variables</a></li>
+			<li><a href="lab6/index.html">Lab 6 Arrays and Objects</a></li>
+		</ul>
 
 </body>
 </html>
