--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - First HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
-</body>
+	<div id="content">	<h1>Hello World </h1>
+		<hr>
+			<p>Hello, My name is Benji. Im from Maryland and now I live in Santa Cruz. My partners name is Ryan. He is
+				<b1>from El Dorado County and is a 3rd year at UCSC.</b1>
+		</p> </div>
+	</body>
 </html>
