--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 3 - File Structure and File Transfer</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h1>Lab 3: File Structures & File Transfers</h1>
+		<p>The goal of this lab was to organize file structures on my system and add index.html files to each lab.</p>
+		<h2>Challenges</h2>
+		<p>I encoutered a lot of challenges during this assignment. Firstly I accidentaly deleted my art101 file attempting to rename it
+			I then ran into issues getting my selfie to appear which turned out to be a misspelling of the file name.
+			Overall I overcame these issues but still find it challenging to keep my files organized and easily locate and move images. </p>
+		<h2>Results</h2>
+		<p>Here is the file structure:</p>
+		<img id="structures" src="img/structures.png" width=200px>
+		<p>...and the HTML for this very page:</p>
+		<img id="HTML Page" src="img/lab3html.png" width=850>
 
 </body>
 </html>
