--- a/lab3/index.html
+++ b/lab3/index.html
@@ -17,6 +17,13 @@
 		<img id="structures" src="img/structures.png" width=200px>
 		<p>...and the HTML for this very page:</p>
 		<img id="HTML Page" src="img/lab3html.png" width=850>
+		<p>This is what the site looks like published using Github!</p>
+		<img id="githubsite" src="img/site-published.png" width=850>
+		<p>...and now how the files look in Github:</p>
+		<img src="img/githubchanges.png" width=850>
+		<p>Lastly the HTML and CSS data for Lab 3</p>
+		<img src="img/html.png" width=850>
+		<img src="img/Css.png">
 
 </body>
 </html>
