--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<main>
-		<h1>Benji Izenberg.</h1>
-		<h2>Art 101: Computer Programmig</h2>
+		<h1>Benji Izenberg</h1>
+		<h2>Art 101: Computer Programming</h2>
 <hr>
 		<p>Hello, my name is Benji Izenberg. I'm a fourth year Psychology and art student at UCSC. I learned a little HTML in highschool but it has been a long time since i've dabbled in coding. I'm very excited for this class as I enjoy the html process. I like to make art and play videogames and look forward to working with my classmates this quarter.</p>
 	</main>
