--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,112 @@
+<!--
+//How to start a manual car
+	//step 1: get inside your car
+		//unlock car door
+	//step 2: Put the keys into the ignition
+		//make sure foot is engaging the break
+		//make sure left foot is engaging the cluch
+		//twist the key to turn on
+	//step 3: shift the car's gear into 1st
+	//step 4: Slowly come off the clutch while pressing down on the gas
+		//this may take practice so be patient!
+	//step 5: once moving and fully off the clutch, disengage the gas and engage the cluch again
+	//step 6: Shift the gear into second
+		//while repeating step 4
+
+//Pseudocoding the card game War (with gambling)
+	//1. randomly select a card for the player and for the computer before each round.
+	//2. Accept user input of amount they would like to bet, or deciding to fold.
+		//if player chooses fold, reset the board
+	//3. Computer calls after a certain card threshold.
+		//more advanced systems can chose to call based on card value and amount the player has bet
+	//4. test of win or lose condition.
+	//5. repeat from step 1.
+-->
 <!DOCTYPE html>
+
 <html>
 <head>
+<style>
+	.labinfo {
+			border: 5px outset blue;
+			background-color: lightblue;
+	}
+	.results {
+			border: 5px outset green;
+			background-color: lightgreen;
+	}
+	h1 {
+			text-align: center;
+			text-shadow: 2px 2px #ff0000;
+	}
+	p {
+			font-size: 26px;
+	}
+	pre {
+			font-size: 17px;
+			color: #940000;
+			background-color: #40CD5C;
+	}
+	h2 {
+			text-align: center;
+			text-shadow: 1px 1px #ff0000;
+	}
+</style>
 	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div class="labinfo">
+		<h1>Challenges</h1>
+			<p>My greatest challenge during this assignment was figuring out how to hide the comments once implemented into html.
+				I solved this problem using the commands using <,!, and --, and closing with "-->". It was also tricky trying to figure out the Teletype system to work side-by-side my partner.
+			</p>
+		<h1>Problems</h1>
+			<p>Overall I encountered very few problems during this assignment. I found it to be quite straightforward. However; im still unsure if I placed the HTML pseudocode in the right place.</p>
+	</div>
+<hr>
+<div class="results">
+	<h1>Results</h1>
+	<hr>
+	<h2>Author block in the java script file</h2>
+		<pre><code>
+			/**
+			 * These comments will show you how to start a manual car and code the card game War with betting.
+			 *
+			 *@link bizenberg.github.io/art101
+			 *@author Benjamin Izenberg
+			 *@file lab3/js/lab.js
+			 *@since 10.13.2021
+			 */
+	 </pre></code>
+	<h2>Pseudocode for how to start a manual car:</h2>
+	 	<pre><code>
+			//How to start a manual car
+		 		//step 1: get inside your car
+		 			//unlock car door
+		 		//step 2: Put the keys into the ignition
+		 			//make sure foot is engaging the break
+		 			//make sure left foot is engaging the cluch
+		 			//twist the key to turn on
+		 		//step 3: shift the car's gear into 1st
+		 		//step 4: Slowly come off the clutch while pressing down on the gas
+		 			//this may take practice so be patient!
+		 		//step 5: once moving and fully off the clutch, disengage the gas and engage the	cluch again
+		 		//step 6: Shift the gear into second
+		 			//while repeating step 4
+		</pre></code>
+	<h2>Pseudocode for how to program the card game War with gambling</h2>
+		<pre><code>
+			//Pseudocoding the card game War (with gambling)
+				//1. randomly select a card for the player and for the computer before each round.
+				//2. Accept user input of amount they would like to bet, or deciding to fold.
+					//if the player chooses to fold, reset the board
+				//3. Computer calls after a certain card threshold.
+					//more advanced systems can choose to call based on card value and the amount the player has bet
+				//4. test of win or lose condition.
+				//5. repeat from step 1.
+		</pre></code>
+</div>
 
 </body>
 </html>
