--- a/lab4/index.html
+++ b/lab4/index.html
@@ -51,11 +51,18 @@
 			text-align: center;
 			text-shadow: 1px 1px #ff0000;
 	}
+	.Header {
+			font-size: 30px;
+			color: #0000FF;
+	}
 </style>
 	<title>Lab X - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div class="Header">
+		<h1>Lab 4</h1>
+	</div>
 	<div class="labinfo">
 		<h1>Challenges</h1>
 			<p>My greatest challenge during this assignment was figuring out how to hide the comments once implemented into html.
