--- a/lab4/index.html
+++ b/lab4/index.html
@@ -27,6 +27,9 @@
 <html>
 <head>
 <style>
+	body {
+			background-color: #C8D8E6;
+	}
 	.labinfo {
 			border: 5px outset blue;
 			background-color: lightblue;
@@ -54,6 +57,7 @@
 	.Header {
 			font-size: 30px;
 			color: #0000FF;
+			text-shadow: 2px 2px #0170D1;
 	}
 </style>
 	<title>Lab X - Subject/Topic</title>
@@ -75,7 +79,7 @@
 <div class="results">
 	<h1>Results</h1>
 	<hr>
-	<h2>Author block in the java script file</h2>
+	<h2>Author block in the java script file:</h2>
 		<pre><code>
 			/**
 			 * These comments will show you how to start a manual car and code the card game War with betting.
@@ -102,7 +106,7 @@
 		 		//step 6: Shift the gear into second
 		 			//while repeating step 4
 		</pre></code>
-	<h2>Pseudocode for how to program the card game War with gambling</h2>
+	<h2>Pseudocode for how to program the card game War with gambling:</h2>
 		<pre><code>
 			//Pseudocoding the card game War (with gambling)
 				//1. randomly select a card for the player and for the computer before each round.
