--- a/lab4/index.html
+++ b/lab4/index.html
@@ -60,12 +60,12 @@
 			text-shadow: 2px 2px #0170D1;
 	}
 </style>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4 - Pseudocode & Problem Solving</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
 	<div class="Header">
-		<h1>Lab 4</h1>
+		<h1>Lab 4: Pseudocode & Problen Solving</h1>
 	</div>
 	<div class="labinfo">
 		<h1>Challenges</h1>
