--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 5 - Data types & Variables</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+		<div id="content">
+			<img src="img/car.jpeg" width= 450px;>
+			<h1>Lab 5 - Data types & Variables</h1>
+				<h2>Challenge</h2>
+					<p>This lab was much harder than the previous projects. The directions were easy to follow and I managed to type out correct looking code, however several things didn't work. The java script output failed to show for some reason and after an hour or so of clicking around it appeared but i'm still not sure why. My partner reminded me to inspect in browser to find errors, I couldn't find any but this sugguestion helped me with future challenges. </p>
+				<h2>Problems</h2>
+					<p>I struggled a lot with formatting on this one, trying to get the image to appear where I wanted it to despite the browser size was not easy. The webpage didn't look right until I entered this very text. It took a lot of writing and erasing CSS code to figure out the problems. I vow to never use the "float" command again. Lol unless someone shows me how.</p>
+				<h2>Results:</h2>
+					<h3>Script Output</h3>
+					<div id="output">
+							<script type="text/javascript" src="js/lab.js"></script>
+					</div>
+				</div>
 
 </body>
 </html>
