--- a/lab5/index.html
+++ b/lab5/index.html
@@ -5,6 +5,39 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+<style>
+img {
+    border: 4px solid black;
+    max-width: 100%;
+    height: auto;
+    float: right;
+    margin: 0 0 0 15px;
+}
+#content {
+    padding: 10px;
+    border: 4px solid black;
+    border-width: thick;
+    background-color: #DEB887;
+}
+p {
+    font-size: 20px;
+}
+#output {
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 25px;
+    background-color: #F0E68C;
+}
+body {
+    background-color: #A52A2A;
+}
+h1,h2 {
+    text-shadow: 2px 2px #ff0000;
+}
+h3 {
+    text-shadow: 1px 1px lightblue;
+}
+</style>
 		<div id="content">
 			<img src="img/car.jpeg" width= 450px;>
 			<h1>Lab 5 - Data types & Variables</h1>
