Nav bar and back buttons
Made nav bar on the home page to styalize links,
every lab now has a back button link to the homepage

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -11,5 +11,6 @@
 			<p>Hello, My name is Benji. Im from Maryland and now I live in Santa Cruz. My partners name is Ryan. He is
 				<b1>from El Dorado County and is a 3rd year at UCSC.</b1>
 		</p> </div>
+			<a href="../index.html"><< Back to homepage</a>
 	</body>
 </html>
