--- a/lab3/index.html
+++ b/lab3/index.html
@@ -23,6 +23,6 @@
 		<p>Lastly the HTML and CSS data for Lab 3</p>
 		<img src="img/html.png" width=850>
 		<img src="img/Css.png">
-
+	<a href="../index.html"><< Back to homepage</a>
 </body>
 </html>
