--- a/lab1/index.html
+++ b/lab1/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
+	<a href="../index.html"><< Back to homepage</a>
 <body>
 
 </body>
