--- a/lab5/index.html
+++ b/lab5/index.html
@@ -52,6 +52,7 @@ h3 {
 							<script type="text/javascript" src="js/lab.js"></script>
 					</div>
 				</div>
+	<a href="../index.html"><< Back to homepage</a>
 
 </body>
 </html>
