--- a/index.html
+++ b/index.html
@@ -3,6 +3,36 @@
 <head>
 	<title>My_Name Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<style>
+	li {
+	    float: center;
+	    display: inline;
+	}
+
+	a {
+	  display: block;
+	  padding: 8px;
+	  background-color: #5f9EA0;
+	}
+	li a {
+	    display: block;
+	    color: black;
+	    font-size: 25px;
+	    text-align: center;
+	    padding: 14px 16px;
+	}
+	li a:hover {
+	    background-color: #0000FF;
+	}
+	ul {
+	  list-style-type: none;
+	  margin: 0;
+	  padding: 0;
+	  background-color: #333;
+	  border: 8px solid #FFEBCD;
+	  border-radius: 8px;
+	}
+</style>
 </head>
 <body>
 	<main>
