--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 	<style>
 	li {
-	    float: center;
+	    align-items: center;
 	    display: inline;
 	}
 
@@ -36,13 +36,17 @@
 </head>
 <body>
 	<main>
+		<img id="my-portrait" src="img/selfie.jpg" />
 		<h1>Benji Izenberg</h1>
 		<h2>Art 101: Computer Programming</h2>
 <hr>
 		<p>Hello, my name is Benji Izenberg. I'm a fourth year Psychology and art student at UCSC. I learned a little HTML in highschool but it has been a long time since i've dabbled in coding. I'm very excited for this class as I enjoy the html process. I like to make art and play videogames and look forward to working with my classmates this quarter.</p>
 	</main>
-<img id="my-portrait" src="img/selfie.jpg" />
 <hr>
+<br>
+<br>
+<br>
+<br>
 	<h2>Labs</h2>
 		<ul>
 			<li><a href="lab2/index.html">Lab 2 HTML & CSS Starter</a></li>
