--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 	  border: 8px solid #FFEBCD;
 	  border-radius: 8px;
 	}
+	#my-portrait {
+	    width: 250px;
+	    height: auto;
+	    border: 8px solid #FFEBCD;
+	    border-radius: 8px;
+	    float: right;
+	    padding: 10px;
+	}
 </style>
 </head>
 <body>
