--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 6 - Arrays & Objecvts</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
+<style>
+img {
+    border: 4px solid #7B68EE;
+    max-width: 100%;
+    height: auto;
+    float: right;
+    margin: 0 0 0 15px;
+}
+#content {
+    padding: 10px;
+    border: 4px solid black;
+    border-width: thick;
+    background-color: #B0C4DE;
+}
+p {
+    font-size: 20px;
+}
+#output {
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 25px;
+    background-color: #F5FFFA;
+}
+body {
+    background-color: #7B68EE;
+}
+h1,h2 {
+    text-shadow: 2px 2px #7B68EE;
+}
+h3 {
+    text-shadow: 1px 1px #7B68EE;
+}
+</style>
 <body>
+
+		<div id="content">
+			<img src="img/car.jpeg" width= 450px;>
+			<h1>Lab 6 - Arrays $ Objects</h1>
+				<h2>Challenge</h2>
+					<p>At first I completely did not understand where to start when defining variables in the console. I remembered how to do what we did in Lab 5 but couldnt figure out the syntax for what we were required to do in this lab. My partner Ryan helped me through this.</p>
+				<h2>Problems</h2>
+					<p>After getting help from Ryan I had very few problems. The biggest issue was trying to figure out why my script output all sayd "/t" in front of it but I then discovered that I was meant to use a '\' rather than '/'.</p>
+				<h2>Results:</h2>
+					<h3>Script Output</h3>
+					<div id="output">
+							<script src="js/lab.js"></script>
+					</div>
+				</div>
+	<a href="../index.html"><< Back to homepage</a>
 
 </body>
 </html>
