--- a/lab6/index.html
+++ b/lab6/index.html
@@ -41,7 +41,7 @@ h3 {
 
 		<div id="content">
 			<img src="img/car.jpeg" width= 450px;>
-			<h1>Lab 6 - Arrays $ Objects</h1>
+			<h1>Lab 6 - Arrays & Objects</h1>
 				<h2>Challenge</h2>
 					<p>At first I completely did not understand where to start when defining variables in the console. I remembered how to do what we did in Lab 5 but couldnt figure out the syntax for what we were required to do in this lab. My partner Ryan helped me through this.</p>
 				<h2>Problems</h2>
