--- a/lab9/index.html
+++ b/lab9/index.html
@@ -28,18 +28,18 @@
 </head>
 	<a href="../index.html"><< Back to homepage</a>
 <body>
-	
+
 
 	<h1>Lab 9: JavaScript for the web</h1>
 
 		<h1>Challenges</h1>
 			<h2>
-				<p></p>
+				<p>This lab was quite hard, the biggest challenge was trying to figure out exactly what the lab was asking for.</p>
 			</h2>
 
 		<h1>Problems</h1>
 			<h2>
-				<p></p>
+				<p>I wasn't sure exactly what our JavaScript program was supposed to do on the webpage. I wondered if there were supposed to be a button or a text box to trigger a response. But instead I left the processes in the console and only displayed the final output.</p>
 			</h2>
 
 		<h1>Results</h1>
