--- a/lab10/index.html
+++ b/lab10/index.html
@@ -4,7 +4,7 @@
 	<title>Lab 10 - JavaScript Events and Forms</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
-
+	<script src="js/lab.js"defer></script>
 <style>
 	div {
 	    border: 1px solid black;
@@ -44,20 +44,21 @@
 			<h1>Lab 10 - JavaScript Events and Forms</h1>
 
 			<h2>Challenges</h2>
-			<p></p>
+			<p>Overall this lab was not too challenging. At first, after looking at Profesor Wes's Lab 10 I had thought we needed to randomize the letters in the word entered.
+			but once I realized that wasn't a requirement I had an easier time replicating lab 7.</p>
 
 			<h2>Problems</h2>
-			<p></p>
+			<p>My biggest problem which I was unable to solve is why my output is showing below the HTML doccument. I trie replicating my partners HTML structure and changing around the Divs but I couldn't get it in the right place.</p>
 
 			<h2>Results</h2>
 
 
 
 				<h3>Script Output</h3>
+				<div id="output">
 				<button id="my-button">Submit</button>
 				<input type="text" id="feed">
-				<script src="js/lab.js"defer></script>
-				<div id="output">	</div>
+			</div id="output">
 </div id="content">
 
 
