--- a/lab10/index.html
+++ b/lab10/index.html
@@ -56,6 +56,7 @@
 
 				<h3>Script Output</h3>
 				<div id="output">
+					<p>Enter your name so I can fix it for you!</p>
 				<button id="my-button">Submit</button>
 				<input type="text" id="feed">
 			</div id="output">
