--- a/lab14/index.html
+++ b/lab14/index.html
@@ -21,10 +21,10 @@
 				<p>Lab 7 had an issue with the letter organizer. When putting in a full name using capital letters, the sorting function
 				would seperate the upper and lower case letters before organizing them. To fix this I had the function convert the name string into
 			all lower case before sorting them.</p>
-			<img src="img/lab7.png" width="550">
+			<img src="img/lab7img.png" width="550">
 				<p>This fix seemed to work fine.
 				Labs 8 & 9 seemed clean. But lab 10 had a similar problem to lab 7:</p>
-			<img src="img/lab10.png" width="550">
+			<img src="img/lab10img.png" width="550">
 				<p>Labs 11 & 12 worked really well, whereas lab 13 seemed to function but the interface was rather sloppy. Unfortuantely,
 					Not really understanding what the desired input was expected I had a hard time cleaning it to make it look nicer.</p>
 
