--- a/lab15/index.html
+++ b/lab15/index.html
@@ -15,11 +15,13 @@
 	<h1>Lab 15 - AJAX</h1>
 
 		<h1>Challenges</h1>
-				<p></p>
+				<p>Finding an API URL that was still functioning and free took a lot of effort.</p>
 
 
 		<h1>Problems</h1>
-				<p></p>
+				<p>Many of the API's that claimed to be free were either discontinued or locked behind a key that I could not figure out how to implement.
+				Eventually, after enough searching my partner was able to find functioning links.
+			Ocasionally the photos in the API we chose are missing, so if the photograph does not appear please try again! </p>
 
 
 		<h1>Results</h1>
@@ -27,7 +29,7 @@
 				<div id="output">
 				</div>
 				<button id="activate">
-						Press?
+						Woof! (press)
 				</button>
 
 </body>
